--- a/tweets/index.html
+++ b/tweets/index.html
@@ -5,10 +5,9 @@
     <title>Tweets during the first electoral debate 2012</title>
     <meta name="description" content="">
     <meta name="author" content="">
-    <style>body,html {width:100%; height:100%; margin:0; padding:0; overflow:hidden;} #map_canvas {position:absolute; top:40px; left:0; right:0; bottom:0;}</style>
+    <style>body,html {width:100%; height:100%; margin:0; padding:0; overflow:hidden;} #map_canvas {position:absolute; top:0px; left:0; right:0; bottom:0;}</style>
     <link rel="stylesheet" href="css/leaflet.css" />
     <!--[if IE]><link rel="stylesheet" href="../css/leaflet.ie.css" /><![endif]-->
-    <link  href="css/cartodb-leaflet.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script src="js/leaflet.js"></script>
     <script type="text/javascript" src="js/wax.leaf.min.js"></script>
@@ -16,17 +15,17 @@
     <script type="text/javascript" src="dist/cartodb-popup-min.js"></script> 
 
     <script type="text/javascript">
-    	var licenses, map;
+      var licenses, map;
 
-  	  function initialize() {
-  			map = new L.Map('map_canvas').setView(new L.LatLng(41.31082388091818, -92.98828125), 4);
+      function initialize() {
+        map = new L.Map('map_canvas', { zoomControl: false }).setView(new L.LatLng(41.31082388091818, -92.98828125), 4);
 
         var mapboxUrl = 'http://{s}.tiles.mapbox.com/v3/saleiva.map-ri1pkhit/{z}/{x}/{y}.png',
-            mapbox = new L.TileLayer(mapboxUrl, {maxZoom: 17, attribution:""});
+        mapbox = new L.TileLayer(mapboxUrl, {maxZoom: 17, attribution:""});
         map.addLayer(mapbox,true);
-              
-    		var query="SELECT * FROM election_tweet_copy";
-          
+
+        var query="SELECT * FROM election_tweet_copy";
+
         votes = new L.CartoDBLayer({
           map: map,
           user_name:'osm2',
@@ -36,7 +35,7 @@
         });
 
         map.addLayer(votes)
-  	  }
+      }
     </script>
   </head>
   <body onload="initialize()">
