--- a/tweets/index.html
+++ b/tweets/index.html
@@ -10,12 +10,12 @@
     <!--[if IE]><link rel="stylesheet" href="../css/leaflet.ie.css" /><![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script src="js/leaflet.js"></script>
+    <script src="js/app.js"></script>
     <script type="text/javascript" src="js/wax.leaf.min.js"></script>
     <script type="text/javascript" src="dist/cartodb-leaflet-min.js"></script>
     <script type="text/javascript" src="dist/cartodb-popup-min.js"></script> 
 
     <script type="text/javascript">
-      var licenses, map;
 
       function initialize() {
         map = new L.Map('map_canvas', { zoomControl: false }).setView(new L.LatLng(41.31082388091818, -92.98828125), 4);
