--- a/syrianspring/index.html
+++ b/syrianspring/index.html
@@ -31,7 +31,7 @@
                 <div id="progress">
                   <!--<span id="progress_count">0</span>-->
                 </div>
-                <a href="#" id="play" onclick="start();"></a>
+                <a href="#" style="display:none;" id="play" onclick="start();"></a>
               </div>
               <div id="spinner"></div>
             </div>
@@ -44,18 +44,18 @@
 
             </aside>
 
-            <!--<script src="js/libs/d3.v2.min.js"></script>-->
-            <!--<script src="js/libs/jquery.min.js"></script>-->
-            <!--<script src="js/libs/underscore-min.js"></script>-->
-            <!--<script src="js/libs/backbone-min.js"></script>-->
-            <!--<script src="js/libs/backbone.cartodb.js"></script>-->
-            <!--<script src="js/libs/class.js"></script>-->
-            <!--<script type="text/javascript" src="js/libs/modestmaps.js"></script>-->
-            <!--<script type="text/javascript" src="js/helpers.js"></script>-->
-            <!--<script type="text/javascript" src="js/app.js"></script>-->
-            <script type="text/javascript" src="query.json"></script>
-            <script type="text/javascript" src="js/all.js"></script>
+            <script src="js/libs/d3.v2.min.js"></script>
+            <script src="js/libs/jquery.min.js"></script>
+            <script src="js/libs/underscore-min.js"></script>
+            <script src="js/libs/backbone-min.js"></script>
+            <script src="js/libs/backbone.cartodb.js"></script>
+            <script src="js/libs/class.js"></script>
+            <script type="text/javascript" src="js/libs/modestmaps.js"></script>
+            <script type="text/javascript" src="js/helpers.js"></script>
+            <script type="text/javascript" src="js/app.js"></script>
 
+            <script type="text/javascript" src="query.json"></script>
+            <!--<script type="text/javascript" src="js/all.js"></script>-->
 
           </body>
         </html>
