--- a/syrianspring/index.html
+++ b/syrianspring/index.html
@@ -18,7 +18,7 @@
           <body onload="initMap();">
             <div id="map"></div>
 
-            <aside class="fadeIn">
+            <aside style="display:none;" class="fadeIn">
 
             <h1>Syria deaths</h1>
 
