--- a/syrianspring/index.html
+++ b/syrianspring/index.html
@@ -50,6 +50,8 @@
             <script src="js/libs/backbone-min.js"></script>
             <script src="js/libs/backbone.cartodb.js"></script>
             <script src="js/libs/class.js"></script>
+            <script src="js/libs/h5utils.js"></script>
+            
             <script type="text/javascript" src="js/libs/modestmaps.js"></script>
             <script type="text/javascript" src="js/helpers.js"></script>
             <script type="text/javascript" src="js/app.js"></script>
