--- a/tweets/index.html
+++ b/tweets/index.html
@@ -14,10 +14,7 @@
     <script type="text/javascript" src="js/wax.leaf.min.js"></script>
     <script type="text/javascript" src="dist/cartodb-leaflet-min.js"></script>
     <script type="text/javascript" src="dist/cartodb-popup-min.js"></script> 
-
-    <script type="text/javascript">
-
-    </script>
+    <script src="js/h5utils.js"></script>
   </head>
   <body>
     <div id="map_canvas"></div>
