--- a/tweets/index.html
+++ b/tweets/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/leaflet.css" />
     <!--[if IE]><link rel="stylesheet" href="../css/leaflet.ie.css" /><![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-    <script src="js/leaflet.js"></script>
+    <script src="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.js"></script>
     <script src="js/app.js"></script>
     <script type="text/javascript" src="js/wax.leaf.min.js"></script>
     <script type="text/javascript" src="dist/cartodb-leaflet-min.js"></script>
