--- a/syrianspring/index.html
+++ b/syrianspring/index.html
@@ -44,6 +44,7 @@
 
             </aside>
 
+            <script src="js/es5-shim/es5-shim.min.js"></script>
             <script src="js/libs/d3.v2.min.js"></script>
             <script src="js/libs/jquery.min.js"></script>
             <script src="js/libs/underscore-min.js"></script>
