--- a/torque/index.html
+++ b/torque/index.html
@@ -110,6 +110,12 @@
 
       }
     </script>
+    <style type="text/css">
+      #map_canvas a div img, #map_canvas .gmnoprint {
+        display:none;
+
+      }
+    </style>
 
   </head>
   <body onload="initialize()">
