--- a/atm/index.html
+++ b/atm/index.html
@@ -10,7 +10,7 @@
     <!--[if IE]><link rel="stylesheet" href="../css/leaflet.ie.css" /><![endif]-->
     <link  href="css/cartodb-leaflet.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-    <script src="js/leaflet.js"></script>
+    <script src="http://cdn.leafletjs.com/leaflet-0.5/leaflet.js"></script>
     <script type="text/javascript" src="js/wax.leaf.min.js"></script>
     <script type="text/javascript" src="dist/cartodb-leaflet-min.js"></script>
     <script type="text/javascript" src="dist/cartodb-popup-min.js"></script> 
@@ -39,7 +39,7 @@
 
           try {
 
-            map.panBy([.1, 0]);
+            map.panBy([1, 0]);
 
           } catch(e) {
 
@@ -52,7 +52,7 @@
       function initialize() {
         parent.postMessage("loaded", "*");
 
-        map = new L.Map('map_canvas', { zoomControl: false }).setView(new L.LatLng(40.43714868233712, -3.6812782287597656), 14);
+        map = new L.Map('map_canvas', { zoomControl: false }).setView(new L.LatLng(40.43714868233712, -9.6812782287597656), 14);
 
         var mapboxUrl = 'http://{s}.tiles.mapbox.com/v3/cartodb.map-ksqx88oi/{z}/{x}/{y}.png',
         mapbox = new L.TileLayer(mapboxUrl, {maxZoom: 16, attribution:""});
