--- a/atm/index.html
+++ b/atm/index.html
@@ -31,15 +31,25 @@
         };
       })();
 
+var lastTime = 0;
+var elapsed = 0;
+var d = 0;
+
       function start() {
 
         (function animloop(){
+   var timeNow = new Date().getTime();
 
           requestAnimFrame(animloop);
+          elapsed = timeNow - lastTime;
+          d += elapsed;
 
           try {
 
-            map.panBy([1, 0]);
+            if (d > 90) {
+              d = 0;
+              map.panBy([1, 0]);
+            }
 
           } catch(e) {
 
