--- a/atm/index.html
+++ b/atm/index.html
@@ -31,22 +31,25 @@
         };
       })();
 
-var lastTime = 0;
-var elapsed = 0;
-var d = 0;
+      lastTime = 0;
+      elapsed = 0;
+      d = 0;
 
       function start() {
 
         (function animloop(){
-   var timeNow = new Date().getTime();
+
+          var timeNow = new Date().getTime();
 
           requestAnimFrame(animloop);
+
           elapsed = timeNow - lastTime;
-          d += elapsed;
+          d += parseInt(elapsed, 10);
+          console.log(d);
 
           try {
 
-            if (d > 100) {
+            if (d > 70) {
               d = 0;
               map.panBy([1, 0]);
             }
