--- a/nightofmuseums/index.html
+++ b/nightofmuseums/index.html
@@ -15,7 +15,36 @@ html, body {
 }
 #map {
   height: 100%;
+  background-color: #384047;
 }
+#mamufas {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  width: 100%;
+  color: #fff;
+  pointer-events:none;
+  background: rgba(0,0,0,0.5) url('img/icon.png') 14px 20px no-repeat;
+  padding: 15px;
+}
+
+#mamufas h1 {
+  font-family: Helvetica, Arial, Sans-serif;
+  font-weight: bold;
+  font-size: 17px;
+  margin: 6px 0 0 106px;
+}
+
+#mamufas h4 {
+  font-family: Helvetica, Arial, Sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 21px;
+  margin: 7px 30px 7px 106px;
+  color: rgba(255,255,255,0.8)
+}
+
 </style>
 <link rel="stylesheet" href="leaflet-0.7/leaflet.css">
 <script src="leaflet-0.7/leaflet-src.js"></script>
@@ -25,10 +54,22 @@ html, body {
 
 <body>
 <div id="map"></div>
+<div id="mamufas">
+  <h1>Lange Nacht Der Museen Berlin 2014</h1>
+  <h4>Museen von spät bis früh — das ist die Lange Nacht der Museen. Vor 17 Jahren in Berlin erfunden, lädt sie in diesem Jahr zum ersten Mal im Mai zum Entdecken, Schlendern, Austauschen und Erleben ein. 80 Türen stehen am 17. Mai 2014 von 18 bis 2 Uhr offen — sie führen in weltberühmte Sammlungen, zu Berliner Originalen, unbekannten Kulturen oder (einst) heißgeliebten Dingen. </h4>
+</div>
 <script>
-var map = new L.Map('map').setView([52.51881, 13.40111], 15);
+var map = new L.Map('map',{
+  center: [52.51881, 13.40111],
+  zoom: 15,
+  minZoom: 15,
+  maxZoom: 17,
+  zoomControl: false
+});
+
+new L.Control.Zoom({ position: 'bottomleft' }).addTo(map);
 //L.tileLayer('https://1.maps.nlp.nokia.com/maptile/2.1/maptile/newest/normal.night.grey/{z}/{x}/{y}/256/png8?lg=eng&token=A7tBPacePg9Mj_zghvKt9Q&app_id=KuYppsdXZznpffJsKT24', { maxNativeZoom: 20, maxZoom: 21 }).addTo(map);
-L.tileLayer('http://1.ashbu.cartocdn.com/saleiva/api/v1/map/saleiva@f32ae618@64ba0ab27375eec56278090fcb6aec3c:1399992526294.95/{z}/{x}/{y}.png', { maxNativeZoom: 20, maxZoom: 21 }).addTo(map);
+L.tileLayer('http://3.ashbu.cartocdn.com/saleiva/api/v1/map/saleiva@2766fda3@051553ab1b6c394b4ae6ad4831a3611f:1400005116762.3/{z}/{x}/{y}.png').addTo(map);
 
 //cartodb.createVis('map', 'http://saleiva.cartodb.com/api/v2/viz/15f8e4ba-dab0-11e3-be35-0e230854a1cb/viz.json', { share: true, title: true, description: true, search: true }).done(function(vis, layers) {});
 
@@ -51,12 +92,12 @@ var osmb = new OSMBuildings(map)
     if (item.properties.has_event) {
       item.properties.color = '#ffcc66';
       item.properties.roofColor = '#cc9933';
-      item.properties.height = Math.max(10, item.properties.height);
+      item.properties.height = Math.max(20, item.properties.height);
     } else {
       // make other buildings flat
       //delete item.properties.height;
-      item.properties.color = 'rgba(96, 96, 96, 0.65)';
-      item.properties.roofColor = 'rgba(32, 32, 32, 0.85)';
+      item.properties.color = 'rgba(47, 57, 64, 0.80)';
+      item.properties.roofColor = 'rgba(83, 100, 113, 0.80)';
     }
   })
   .loadData(
