--- a/nightofmuseums/index.html
+++ b/nightofmuseums/index.html
@@ -63,7 +63,7 @@ html, body {
 <div id="map"></div>
 <div id="mamufas">
   <h1>Lange Nacht Der Museen Berlin 2014</h1>
-  <h4>Museums will be open at night, that's the Lange Nacht der Museen. Started 17 years ago this year you will be able to enjoy, discover and experience the Berlin Museums in May for the first time. 80 doors will be open and welcome you on May 17th from 4pm to 2am and will lead you to world renowned collections, original pieces, unknown cultures and other amazing stuff. Discover all the places on this map created with <a href="http://cartodb.com">CartoDB</a> and <a href="http://osmbuildings.org">OSMBuildings</a></h4>
+  <h4>Started 17 years ago as a way to give people a new way to enjoy, discover, and experience museums on the Saturday night before International Museum Day.  This year 76 doors will be open to welcome you on May 17, from 6 p.m. to 2 a.m., providing you with access to world renowned collections, original pieces, unknown cultures, and loads of other amazing things. Learn more on this map created using CartoDB and OSMBuildings. Discover all of the participating locations on this map using <a href="http://cartodb.com">CartoDB</a> and <a href="http://osmbuildings.org">OSMBuildings</a></h4>
 </div>
 <script>
 var map = new L.Map('map', {
